fix: alignment bug fixed

--- a/src/PlacesToStay/PlacesToStay.css
+++ b/src/PlacesToStay/PlacesToStay.css
@@ -92,7 +92,7 @@
         justify-content: center;
         align-items: center;
         margin: 50px 100px;
-        margin-left: 140px;
+        margin-left: 135px;
     }
 
 
